// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeOdd fails when given an odd number 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toBeOdd()</intensity>

Expected value to not be odd received:
  <red>1</color>"
`;

exports[`.toBeOdd fails when given not given an odd number 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeOdd()</intensity>

Expected value to be odd received:
  <red>false</color>"
`;

exports[`.toBeOdd fails when given not given an odd number 2`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeOdd()</intensity>

Expected value to be odd received:
  <red>true</color>"
`;

exports[`.toBeOdd fails when given not given an odd number 3`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeOdd()</intensity>

Expected value to be odd received:
  <red>""</color>"
`;

exports[`.toBeOdd fails when given not given an odd number 4`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeOdd()</intensity>

Expected value to be odd received:
  <red>2</color>"
`;

exports[`.toBeOdd fails when given not given an odd number 5`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeOdd()</intensity>

Expected value to be odd received:
  <red>{}</color>"
`;

exports[`.toBeOdd fails when given not given an odd number 6`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeOdd()</intensity>

Expected value to be odd received:
  <red>[Function anonymous]</color>"
`;

exports[`.toBeOdd fails when given not given an odd number 7`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeOdd()</intensity>

Expected value to be odd received:
  <red>undefined</color>"
`;

exports[`.toBeOdd fails when given not given an odd number 8`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeOdd()</intensity>

Expected value to be odd received:
  <red>null</color>"
`;

exports[`.toBeOdd fails when given not given an odd number 9`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeOdd()</intensity>

Expected value to be odd received:
  <red>NaN</color>"
`;
